# internal/models/user/AuthResponse.go
@@ -1,0 +1,5 @@
+package models
+
+type AuthReponse struct {
+	Token string `json:"token"`
+}
