# internal/models/user/RegisterDto.go
@@ -1,7 +1,6 @@
 package models
 
-type User struct {
-	ID       uint   `gorm:"primaryKey"`
+type RegisterDto struct {
 	Name     string `json:"name"`
 	Email    string `json:"email"`
 	Password string `json:"password"`
